# credit-rating-agencies

./: .gitignore  README.md
backend/: .pre-commit-config.yaml  Dockerfile  api.py  development.db  main.py  mypy.ini  pyproject.toml  ruff.toml  schemas.py  service.py
backend/celery_task/: tasks.py
backend/celery_task/ml/: main.py  models.py  preprocessing.py
backend/celery_task/ml/models/: README.md
backend/conf/: settings.py
backend/db/: connection.py  models.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 22d7eac0a6cd_new_database.py  efd536a0f441_.py
frontend/: data.db  main.py  pyproject.toml
frontend/.streamlit/: pages.toml
frontend/pages/: add-press-release.py  credit-agencies.py  credit-agent.py
frontend/utils/: db.py  utils.py
