[tool.poetry]
name = "backend-cra"
version = "0.1.0"
description = "Backend FastAPI credit rating agencies"
authors = ["Nikita Seliverstov <nikitaselver@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "*"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
