[tool.poetry]
name = "backend-cra"
version = "0.1.0"
description = "Backend FastAPI credit rating agencies"
authors = ["Nikita Seliverstov <nikitaselver@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.3"
natasha = "^1.6.0"
pandas = "^2.2.1"
nltk = "^3.8.1"
transformers = "^4.39.3"
torch = "^2.2.2"
safetensors = "^0.4.2"
sentence-transformers = "^2.6.1"
transformers-interpret = "^0.10.0"
flower = "^2.0.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "*"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
